--- a/app.json
+++ b/app.json
@@ -9,8 +9,7 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.animesh08.AMS-DEV"
+      "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
@@ -20,8 +19,7 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false,
-      "package": "com.animesh08.AMS_DEV"
+      "predictiveBackGestureEnabled": false
     },
     "web": {
       "output": "static",
@@ -48,10 +46,7 @@
       "reactCompiler": true
     },
     "extra": {
-      "router": {},
-      "eas": {
-        "projectId": "087150a6-62f0-4b23-8234-ee969d5f3bb1"
-      }
+      "router": {}
     }
   }
 }
