--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactams",
+  "name": "mdm-app",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "keywords": [
@@ -23,11 +23,11 @@
   "dependencies": {
     "@animesh08/ams-components": "^2.0.11",
     "@expo/vector-icons": "^15.0.2",
-    "@react-navigation/drawer": "^7.7.9",
+    "@react-navigation/drawer": "^7.5.0",
     "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.25",
+    "@react-navigation/native": "^7.1.8",
     "axios": "^1.12.2",
-    "expo": "~54.0.25",
+    "expo": "~54.0.30",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.20",
@@ -35,10 +35,11 @@
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
-    "expo-linking": "~8.0.9",
+    "expo-linking": "~8.0.11",
     "expo-network": "~8.0.8",
-    "expo-router": "~6.0.15",
-    "expo-splash-screen": "~31.0.11",
+    "expo-router": "~6.0.21",
+    "expo-secure-store": "~15.0.8",
+    "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
