--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 EXPO_PUBLIC_API_URL = "https://aonapps.in:7080/api"
 EXPO_PUBLIC_APP_ID = "886d475c-2c13-4acd-84d6-c25de53dd6b7"
 EXPO_PUBLIC_COMPANY_ID = "599fa730-0e87-43c1-b1d0-6b7be5d7069a"
+EXPO_PUBLIC_APP_API_URL = "https://aonapps.in:6070/mdm/api"
