--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@animesh08/ams-components": "^2.0.11",
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/drawer": "^7.5.0",
     "@react-navigation/elements": "^2.6.3",
@@ -50,6 +51,7 @@
     "react-native": "0.81.5",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-mmkv": "^4.1.0",
     "react-native-paper": "^5.14.5",
     "react-native-paper-tabs": "^0.11.4",
     "react-native-reanimated": "~4.1.1",
