--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ EXPO_PUBLIC_API_URL = "https://itms.emamiagrotech.com:8082/MDM_AMS_API/api"
 EXPO_PUBLIC_APP_ID = "886d475c-2c13-4acd-84d6-c25de53dd6b7"
 EXPO_PUBLIC_COMPANY_ID = "599fa730-0e87-43c1-b1d0-6b7be5d7069a"
 EXPO_PUBLIC_APP_API_URL = "https://itms.emamiagrotech.com:8082/mdm_api/api"
+EXPO_PUBLIC_DOC_TYPE = "417DF54F-9632-4A8E-A10C-E9C4F17B3FCB"
